# python-for-data-analysis

./: README.md  main.py  pyproject.toml
class-14-model-building-for-prediction/: class-14.ipynb
