[project]
name = "python-for-data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=8.0.0",
    "beautifulsoup4>=4.14.3",
    "dask>=2025.12.0",
    "distributed>=2025.12.0",
    "holidays>=0.88",
    "holoviews>=1.22.1",
    "hvplot>=0.12.2",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numexpr>=2.14.1",
    "numpy==1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "pmdarima>=2.1.1",
    "prophet>=1.2.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
    "sympy>=1.14.0",
    "tables>=3.10.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
    "xlwings>=0.33.19",
]
